--- a/Frontend/personalAccount.html
+++ b/Frontend/personalAccount.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Account</title>
     <link rel="stylesheet" href="./css/personal.css">
+    <script src="./js/personal.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 
-    <script src="./js/personal.js"></script>
     <div class="wrapper">
             <header> 
                 <div class="name_page">Личный кабинет</div>
@@ -42,14 +43,29 @@
 
             
             <div class="programms">
-                <button onclick="dropDown();" class="dropbtn"> Программы </button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#"> Программа 1</a>
-                <a href="#"> Программа 2</a>
-                <a href="#"> Программа 3</a>
-            </div>
-            </div>
+
+                <div class="searcher">
+                    <img src="./img/loupe.png" alt="Поиск">
+                    <input type="text" class="search" id="input" autofocus>
+                    <a href="#"><img src="./img/add.png" alt="Добавить"></a>
                 </div>
+
+                <ol class="for-ul">
+                    <li> <a href="#"></a> Программа 1</li>
+                    <li>Программа 2</li>
+                    <li>Программа 3</li>
+                    <li>Программа 4</li>
+                    <li>Программа 5</li>
+                    <li>Программа 6</li>
+                    <li>Программа 7</li>
+                    <li>Программа 8</li>
+                    <li>Программа 9</li>
+                    <li>Программа 10</li>
+                    <li>Программа 11</li>
+                    <li>Программа 12</li>
+                </ol>
+            </div>
+            </div>
     </div>
 
 
