--- a/Frontend/program.html
+++ b/Frontend/program.html
@@ -30,6 +30,7 @@
         <div class="buttons">
             <button>Редактировать программу</button>
             <button>Удалить программу</button>
+            <button>Добавить группу</button>
         </div>
         
         <div class="links">
