--- a/Frontend/program.html
+++ b/Frontend/program.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./js/program.js"></script>
     <link rel="stylesheet" href="./css/program.css">
 </head>
 <body>
@@ -33,10 +34,14 @@
             <button>Добавить группу</button>
         </div>
         
-        <div class="links">
-            <a href="#">Группа 1</a>
-            <a href="#">Группа 2</a>
-            <a href="#">Группа 3</a>
+
+        <div class="dropdown">
+            <button onclick="dropDown()" class="dropbtn">Группы</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#">Группа 1</a>
+                <a href="#">Группа 2</a>
+                <a href="#">Группа 3</a>
+            </div>
         </div>
     </div>
 </body>
