--- a/ElectronicReports/Frontend/program.html
+++ b/ElectronicReports/Frontend/program.html
@@ -1,5 +1,3 @@
-<?php include("../backend/func/2.php")?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,27 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./js/program.js"></script>
     <link rel="stylesheet" href="./css/program.css">
 </head>
 <body>
-    <header>
-        <div class="name_page">Программа</div>
+    <header> 
+        <div class="name_page">Старт в IT</div>
         <div class="header_list">
-            <a href="./personal.html" class="header_link">В личный кабинет</a>
+            <a href="#" class="header_link">В личный кабинет</a>
     </div>
     </header>
     <div class="wrapper">
         <div class="info">
-            <?php include("../backend/proginfo.php")?>
+            <p>
+                Название: Старт в IT 
+            </p>
+            <p>
+                Длительность: 72 часа
+            </p>
+            <p>
+                Количество групп: 3
+            </p>
         </div>
 
         <div class="buttons">
-            <button onclick="location.href = '#'">Редактировать программу</button>
-            <button onclick="location.href = '#'">Удалить программу</button>
-            <button onclick="location.href = '../backend/newgroup.php'">Добавить группу</button>
+            <button>Редактировать программу</button>
+            <button>Удалить программу</button>
+            <button>Добавить группу</button>
         </div>
+        
 
-        <div class="links">
+        <div class="dropdown">
+            <button onclick="dropDown()" class="dropbtn">Группы</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#">Группа 1</a>
+                <a href="#">Группа 2</a>
+                <a href="#">Группа 3</a>
+            </div>
         </div>
     </div>
 </body>
