--- a/ElectronicReports/Frontend/addChild.html
+++ b/ElectronicReports/Frontend/addChild.html
@@ -1,5 +1,3 @@
-<?php include("../backend/func/2.php")?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,59 +15,59 @@
 
 <body>
 
-    <header>
+    <header> 
         <div class="name_page">Добавить обучающегося</div>
         <div class="header_list">
-        <a href="./childrenList.html" class="header_link">К списку группы</a>
+        <a href="#" class="header_link">Выход</a>
     </div>
     </header>
 
-    <form id="form" action="../backend/newchild.php" method="post" accept-charset="utf-8">
+    <form id="form" action="../backend/check0.php" method="post" accept-charset="utf-8">
         <fieldset>
             <p class="item">
                 <label>Имя:</label>
-                <input type="text" class="fields" id="name" name="name" placeholder="Имя" pattern="[A-Za-zА-Яа-яЁё]{2,}">
+                <input type="text" class="fields" placeholder="Имя" pattern="[A-Za-zА-Яа-яЁё]{2,}">
             </p>
 
             <p class="item">
                 <label>Фамилия:</label>
-                <input type="text" class="fields" id="lastname" name="lastname" placeholder="Фамилия" pattern="[A-Za-zА-Яа-яЁё]{2,}">
+                <input type="text" class="fields" placeholder="Фамилия" pattern="[A-Za-zА-Яа-яЁё]{2,}">    
             </p>
 
             <p class="item">
                 <label>Отчество:</label>
-                <input type="text" class="fields" id="fathers_name" name="fathers_name" placeholder="Отчество" pattern="[A-Za-zА-Яа-яЁё]"{2,}>
+                <input type="text" class="fields" placeholder="Отчество" pattern="[A-Za-zА-Яа-яЁё]"{2,}>    
             </p>
             <p class="item">
                 <label>Дата рождения</label>
-                <input type="date" class="fields" id="birthdate" name="birthdate" placeholder="01.01.1991">
+                <input type="date" class="fields" placeholder="01.01.1991">    
             </p>
 
             <p class="item">
                 <label>Номер сертификата</label>
-                <input type="text" class="fields" id="certificatenum" name="certificatenum" placeholder="1_0000000_00000" pattern="[0-9]{1}_[0-9]{7}_[0-9]{5}">
+                <input type="text" class="fields" placeholder="1_0000000_00000" pattern="[0-9]{1}_[0-9]{7}_[0-9]{5}">    
             </p>
 
             <p class="item">
                 <label>Адрес</label>
-                <input type="text" class="fields" id="address" name="address" placeholder="г. Петрозаводск, ул. Крупской, д. 12">
+                <input type="text" class="fields" placeholder="г. Петрозаводск, ул. Крупской, д. 12">    
             </p>
 
             <p class="item">
                 <label>Телефон родителя</label>
-                <input type="tel" class="fields" id="telephonnum" name="telephonnum" placeholder="+7(xxx)xxx-xx-xx" pattern="+7([0-9]){3}[0-9]{3}-[0-9]{2}-[0-9]{2}">
+                <input type="tel" class="fields" placeholder="+7(xxx)xxx-xx-xx" pattern="+7([0-9]){3}[0-9]{3}-[0-9]{2}-[0-9]{2}">    
             </p>
 
             <p class="item">
                 <label>Номер СНИЛС</label>
-                <input type="text" class="fields" id="snils" name="snils" placeholder="123-456-789 00" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}\s[0-9]{2}">
+                <input type="text" class="fields" placeholder="123-456-789 00" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}\s[0-9]{2}">    
             </p>
-
+                
             </fieldset>
 
             <button class="btn btn-success" type="submit" onclick="submit();"> Добавить обучающегося </button>
     </form>
 
-
+    
 </body>
 </html>
