--- a/Frontend/personalAccount.html
+++ b/Frontend/personalAccount.html
@@ -51,18 +51,18 @@
                 </div>
 
                 <ol class="for-ul">
-                    <li> <a href="#"></a> Программа 1</li>
-                    <li>Программа 2</li>
-                    <li>Программа 3</li>
-                    <li>Программа 4</li>
-                    <li>Программа 5</li>
-                    <li>Программа 6</li>
-                    <li>Программа 7</li>
-                    <li>Программа 8</li>
-                    <li>Программа 9</li>
-                    <li>Программа 10</li>
-                    <li>Программа 11</li>
-                    <li>Программа 12</li>
+                    <li> <a href="#">Программа 1</a></li>
+                    <li> <a href="#">Программа 2</a></li>
+                    <li> <a href="#">Программа 3</a></li>
+                    <li> <a href="#">Программа 4</a></li>
+                    <li> <a href="#">Программа 5</a></li>
+                    <li> <a href="#">Программа 6</a></li>
+                    <li> <a href="#">Программа 7</a></li>
+                    <li> <a href="#">Программа 8</a></li>
+                    <li> <a href="#">Программа 9</a></li>
+                    <li> <a href="#">Программа 10</a></li>
+                    <li> <a href="#">Программа 11</a></li>
+                    <li> <a href="#">Программа 12</a></li>
                 </ol>
             </div>
             </div>
