--- a/Frontend/program.html
+++ b/Frontend/program.html
@@ -31,18 +31,22 @@
         <div class="buttons">
             <button>Редактировать программу</button>
             <button>Удалить программу</button>
-            <button>Добавить группу</button>
         </div>
         
 
-        <div class="dropdown">
-            <button onclick="dropDown()" class="dropbtn">Группы</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">Группа 1</a>
-                <a href="#">Группа 2</a>
-                <a href="#">Группа 3</a>
+        <div class="but_groups">
+            <div class="dropdown">
+                <button onclick="dropDown()" class="dropbtn">Группы</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Группа 1</a>
+                    <a href="#">Группа 2</a>
+                    <a href="#">Группа 3</a>
+                </div>
             </div>
+
+            <button>Добавить группу</button>
         </div>
+        
     </div>
 </body>
 </html>
