--- a/Frontend/usersList.html
+++ b/Frontend/usersList.html
@@ -29,8 +29,8 @@
     <ol class="ul">
         <div class="block">
             <li class="extremum-click">id </li>
-            <div class="extremum-slide">
-                <form class="success" action="" autocomplete="off" id="form">
+            <div id="slide" class="extremum-slide">
+                <form id="formS" class="success" action="" autocomplete="off" id="form">
                     <fieldset class="characteristics">
                         <p class="item">
                             <label>Login:</label>
