--- a/Frontend/registration_form.html
+++ b/Frontend/registration_form.html
@@ -57,7 +57,7 @@
                 
             </fieldset>
 
-            <button class="btn btn-success" type="submit" onclick="submit();"> Зарегистрировать пользователя </button>
+            <button class="btn btn-success" type="submit"> Зарегистрировать пользователя </button>
     </form>
 
     
