--- a/ElectronicReports/Frontend/childrenListAd.html
+++ b/ElectronicReports/Frontend/childrenListAd.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/childrenList.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src = "./js/childrenList.js"></script>
+<script src = "./js/childrenList1.js"></script>
 <title>Children's list</title>
 </head>
 
@@ -16,20 +16,20 @@
         <header>
             <div class="name_page">Список обучающихся</div>
             <div class="header_list">
-            <a href="./groupList.html" class="header_link">К группе</a>
+            <a href="./personalAdmin.html" class="header_link">Личный кабинет</a>
         </div>
         </header>
 
-        <div class="searcher">
+        <div class="searcher1">
             <img src="./img/loupe.png" alt="Поиск">
             <input type="text" class="search" id="input" autofocus>
-            <a href="./addChild.html"><img src="./img/add.png" alt="Добавить"></a>
+            <a href="./addChild.html?link=link"><img src="./img/add.png" alt="Добавить"></a>
             </div>
 
 
 
     <ol class="ul">
-        <?php include("../backend/stud/childrenList.php")?>
+        <?php include("../backend/stud/childrenListAd.php")?>
     </ol>
 
 </body>
