--- a/ElectronicReports/Frontend/register0.html
+++ b/ElectronicReports/Frontend/register0.html
@@ -55,7 +55,7 @@
 
             <p>
                 <label>Статус</label>
-                <input type="text" id="status", name="status", placeholder="1 - админ, 0 - юзер", autocomplete="off">
+                <input type="text" id="status", name="status", placeholder="1 - админ, 0 - юзер", autocomplete="off" required>
             </p>
 
             </fieldset>
