--- a/ElectronicReports/Frontend/userList.html
+++ b/ElectronicReports/Frontend/userList.html
@@ -14,22 +14,22 @@
 
     <div class="wrapper">
         <header>
-            <div class="name_page">Список обучающихся</div>
+            <div class="name_page">Список пользователей</div>
             <div class="header_list">
-            <a href="./groupList.html" class="header_link">К группе</a>
+            <a href="./personalAdmin.html" class="header_link">Личный кабинет</a>
         </div>
         </header>
 
         <div class="searcher">
             <img src="./img/loupe.png" alt="Поиск">
             <input type="text" class="search" id="input" autofocus>
-            <a href="./addChild.html"><img src="./img/add.png" alt="Добавить"></a>
+            <a href="./register0.html"><img src="./img/add.png" alt="Добавить"></a>
             </div>
 
 
 
     <ol class="ul">
-        <?php include("../backend/stud/childrenList.php")?>
+        <?php include("../backend/user/userList.php")?>
     </ol>
 
 </body>
