--- a/ElectronicReports/index.html
+++ b/ElectronicReports/index.html
@@ -12,6 +12,7 @@
 
         <figure>
             <img src="./frontend/img/logo.png" alt="logo">
+            <?php include("./backend/func/aut.php")?>
         </figure>
 
         <div class="autorize-container" action="./backend/authorization.php">
@@ -19,6 +20,7 @@
                 <input name="password" id="password" type="password" class="password" placeholder="Пароль:">
                 <button class="submit" type="submit"> Войти </button>
             </div>
+
     </form>
 </body>
 </html>
