--- a/ElectronicReports/Frontend/groupList.html
+++ b/ElectronicReports/Frontend/groupList.html
@@ -1,4 +1,4 @@
-<?php include("../backend/func/2.php")?>
+<?php include("../backend/func/3.php")?>
 
 <!DOCTYPE html>
 <html>
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/childrenList.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src = "./js/childrenList.js"></script>
+<script src = "./js/childrenList1.js"></script>
 <title>Children's list</title>
 </head>
 
@@ -20,10 +20,13 @@
         </div>
         </header>
 
-        <div class="searcher">
+        <div class="searcher1">
             <img src="./img/loupe.png" alt="Поиск">
-            <input type="text" class="search" id="input" autofocus>
-            <a href="./childrenList.html"><img src="./img/add.png" alt="К общему списку"></a>
+            <input type="text" class="search1" id="input" autofocus>
+            <div class="buts">
+                <button id="add1" onclick='location.href = "./childrenList.html"'>Добавить из списка</button>
+                <button id="delGroup" onclick='location.href = "../backend/group/delgr.php"'>Удалить группу</button>
+            </div>
             </div>
 
 
