--- a/ElectronicReports/Frontend/personal.html
+++ b/ElectronicReports/Frontend/personal.html
@@ -28,7 +28,7 @@
             <div class="reports">
                 <h1>Формы отчетности:</h1>
                 <p>
-                    <a href="#" class="reports_link"> Журналы</a>
+                    <a href="./listOfGroups.html" class="reports_link"> Список обучающихся группы</a>
                 </p>
 
                 <p>
