--- a/ElectronicReports/Frontend/register0.html
+++ b/ElectronicReports/Frontend/register0.html
@@ -54,6 +54,11 @@
             </p>
 
             <p>
+                <label>Должность</label>
+                <input type="text" id="post", name="post", placeholder="Старший преподаватель", autocomplete="off" required>
+            </p>
+
+            <p>
                 <label>Статус</label>
                 <input type="text" id="status", name="status", placeholder="1 - админ, 0 - юзер", autocomplete="off" required>
             </p>
