--- a/ElectronicReports/Frontend/userList.html
+++ b/ElectronicReports/Frontend/userList.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/childrenList.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src = "./js/childrenList.js"></script>
+<script src = "./js/childrenList1.js"></script>
 <title>Children's list</title>
 </head>
 
