--- a/ElectronicReports/Frontend/personalAdmin.html
+++ b/ElectronicReports/Frontend/personalAdmin.html
@@ -25,11 +25,9 @@
             </div>
 
             <div class="reports">
-                <h1>Формы отчетности:</h1>
+                <h1>Админ:</h1>
 
-                <p>
-                    <a href="./userList.html" class="header_link"> Список пользователей</a>
-                </p>
+                
 
 								<p>
                     <a href="./register0.html" class="header_link"> Создание нового пользователя</a>
@@ -37,6 +35,20 @@
 
 								<p>
                     <a href="./childrenListAd.html" class="header_link"> Обучаемые</a>
+                </p>
+
+                <h1>Формы отчетности:</h1>
+
+                <p>
+                    <a href="./listOfGroups.html" class="reports_link"> Список обучающихся группы</a>
+                </p>
+
+                <p>
+                    <a href="./eventsForm.html" class="reports_link"> Отчёт о проведении иных мероприятий</a>
+                </p>
+
+                <p>
+                    <a href="./analitycsForm.html" class="reports_link"> Аналитический отчёт о проведении мероприятий</a>
                 </p>
             </div>
 
