--- a/ElectronicReports/Frontend/personal.html
+++ b/ElectronicReports/Frontend/personal.html
@@ -32,11 +32,11 @@
                 </p>
 
                 <p>
-                    <a href="#" class="reports_link"> Календарно-учебные графики</a>
+                    <a href="./eventsForm.html" class="reports_link"> Отчёт о проведении иных мероприятий</a>
                 </p>
 
                 <p>
-                    <a href="#" class="reports_link"> Карты педагогического наблюдения</a>
+                    <a href="./analitycsForm.html" class="reports_link"> Аналитический отчёт о проведении мероприятий</a>
                 </p>
             </div>
 
