--- a/ElectronicReports/Frontend/listOfGroups1.html
+++ b/ElectronicReports/Frontend/listOfGroups1.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add program</title>
+    <title>Group list report</title>
     <link rel="stylesheet" href="./css/registration.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
