--- a/ElectronicReports/Frontend/newprogram.html
+++ b/ElectronicReports/Frontend/newprogram.html
@@ -42,7 +42,7 @@
                 <?php include("../backend/func/progname.php")?>
             <p class="item">
                 <label>Название</label>
-                <input type="tel" class="fields" id="title" name="title" placeholder="Новая программа" maxlength="30" autocomplete="off" autofocus pattern="[A-Za-zА-Яа-яЁё]{2,30}" required>
+                <input type="tel" class="fields" id="title" name="title" placeholder="Новая программа" maxlength="30" autocomplete="off" autofocus required>
             </p>
 
             <p class="item">
