--- a/ElectronicReports/Frontend/setProgram.html
+++ b/ElectronicReports/Frontend/setProgram.html
@@ -46,7 +46,7 @@
 
         </fieldset>
 
-            <button class="btn btn-success" type="submit" onclick="submit()"> Редактировать программу </button>
+            <button class="btn btn-success" type="submit"> Редактировать программу </button>
     </form>
 
 
